Add rules for main element

--- a/style.css
+++ b/style.css
@@ -60,3 +60,40 @@ h1 { font-size: 5rem; }
 
 h2 { font-size: 2.5rem; }
 
+h3 { font-size: 2rem; }
+
+h1, h2, h3 {
+  color: #000000;
+  font-weight: bold;
+}
+
+main { padding: 0 6rem 3rem 6rem; }
+
+main > h2 { padding-bottom: 2rem; }
+
+.projects-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(min-content, 500px));
+  gap: 3rem;
+}
+
+.project {
+  border: 1px solid #e2e2e2;
+  box-shadow: 8px 8px 8px var(--box-shadow-color);
+}
+
+.project > img {
+  width: 100%;
+  box-shadow: 0 1px 0 var(--box-shadow-color);
+}
+
+.project-heading {
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+}
+
+.project-heading h3 { flex: 1; }
+
+.project-description { padding: 1rem 1rem 2rem 1rem; }
+
