--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
 }
 
 body {
-  min-width: 510px;
   background-color: var(--main-background-color);
   color: #555555;
   font-size: 20px;
@@ -25,7 +24,7 @@ header {
   bottom: 0;
   z-index: -1;
   height: 100%;
-  width: 200%;
+  width: 1000%;
   transform: translate(-200px, -400px) rotate(-10deg);
   background-color: var(--accent-background-color);
 }
@@ -125,3 +124,33 @@ footer {
   gap: 1rem;
 }
 
+@media (max-width: 1240px) {
+  .wide-heading { display: none; }
+
+  .narrow-heading {
+    color: var(--main-background-color);
+    display: inline-block;
+  }
+
+  header {
+    padding: 2rem 0;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  main { padding: 2rem 3rem; }
+
+  .projects-container { grid-template-columns: 1fr; }
+
+  footer {
+    padding: 3rem;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+}
+
+@media (max-width: 640px) {
+  h1 { font-size: 3rem; }
+
+  header, main, footer { padding: 1rem; }
+}
