--- a/style.css
+++ b/style.css
@@ -148,6 +148,8 @@ footer {
 
   main { padding: 2rem 3rem; }
 
+  main > h2 { text-align: center; }
+
   .projects-container { grid-template-columns: 1fr; }
 
   footer {
