Move current project into template directory

--- a/template/index.html
+++ b/template/index.html
@@ -36,9 +36,9 @@
         </p>
   
         <div class="links">
-          <a href="#"><img src="media/github-mark-dark.svg" alt="Github invertocat logo" width="45px" height="45px"></a>
-          <a href="#"><img src="media/linkedin-dark.svg" alt="Linkedin logo" width="45px" height="45px"></a>
-          <a href="#"><img src="media/twitter-dark.svg" alt="Twitter logo" width="45px" height="45px"></a>
+          <a href="#"><img src="../images/misc/github-mark-dark.svg" alt="Github invertocat logo" width="45px" height="45px"></a>
+          <a href="#"><img src="../images/misc/linkedin-dark.svg" alt="Linkedin logo" width="45px" height="45px"></a>
+          <a href="#"><img src="../images/misc/twitter-dark.svg" alt="Twitter logo" width="45px" height="45px"></a>
         </div>
       </section>
     </div>
@@ -48,13 +48,13 @@
     <h2>My work</h2>
     <div class="projects-container">
       <article class="project">
-        <img src="media/project-placeholder.png" alt="">
+        <img src="../images/misc/project-placeholder.png" alt="">
 
         <div class="project-heading">
           <h3>Project name</h3>
           <div>
-            <a href="#"><img src="media/github-mark-dark.svg" alt="Github invertocat logo" width="30px" height="30px"></a>
-            <a href="#"><img src="media/open-in-new.svg" alt="" width="30px" height="30px"></a>
+            <a href="#"><img src="../images/misc/github-mark-dark.svg" alt="Github invertocat logo" width="30px" height="30px"></a>
+            <a href="#"><img src="../images/misc/open-in-new.svg" alt="" width="30px" height="30px"></a>
           </div>
         </div>
 
@@ -64,13 +64,13 @@
       </article>
 
       <article class="project">
-        <img src="media/project-placeholder.png" alt="">
+        <img src="../images/misc/project-placeholder.png" alt="">
 
         <div class="project-heading">
           <h3>Project name</h3>
           <div>
-            <a href="#"><img src="media/github-mark-dark.svg" alt="Github invertocat logo" width="30px" height="30px"></a>
-            <a href="#"><img src="media/open-in-new.svg" alt="" width="30px" height="30px"></a>
+            <a href="#"><img src="../images/misc/github-mark-dark.svg" alt="Github invertocat logo" width="30px" height="30px"></a>
+            <a href="#"><img src="../images/misc/open-in-new.svg" alt="" width="30px" height="30px"></a>
           </div>
         </div>
 
@@ -80,13 +80,13 @@
       </article>
 
       <article class="project">
-        <img src="media/project-placeholder.png" alt="">
+        <img src="../images/misc/project-placeholder.png" alt="">
 
         <div class="project-heading">
           <h3>Project name</h3>
           <div>
-            <a href="#"><img src="media/github-mark-dark.svg" alt="Github invertocat logo" width="30px" height="30px"></a>
-            <a href="#"><img src="media/open-in-new.svg" alt="" width="30px" height="30px"></a>
+            <a href="#"><img src="../images/misc/github-mark-dark.svg" alt="Github invertocat logo" width="30px" height="30px"></a>
+            <a href="#"><img src="../images/misc/open-in-new.svg" alt="" width="30px" height="30px"></a>
           </div>
         </div>
 
@@ -96,13 +96,13 @@
       </article>
 
       <article class="project">
-        <img src="media/project-placeholder.png" alt="">
+        <img src="../images/misc/project-placeholder.png" alt="">
 
         <div class="project-heading">
           <h3>Project name</h3>
           <div>
-            <a href="#"><img src="media/github-mark-dark.svg" alt="Github invertocat logo" width="30px" height="30px"></a>
-            <a href="#"><img src="media/open-in-new.svg" alt="" width="30px" height="30px"></a>
+            <a href="#"><img src="../images/misc/github-mark-dark.svg" alt="Github invertocat logo" width="30px" height="30px"></a>
+            <a href="#"><img src="../images/misc/open-in-new.svg" alt="" width="30px" height="30px"></a>
           </div>
         </div>
 
@@ -112,13 +112,13 @@
       </article>
 
       <article class="project">
-        <img src="media/project-placeholder.png" alt="">
+        <img src="../images/misc/project-placeholder.png" alt="">
 
         <div class="project-heading">
           <h3>Project name</h3>
           <div>
-            <a href="#"><img src="media/github-mark-dark.svg" alt="Github invertocat logo" width="30px" height="30px"></a>
-            <a href="#"><img src="media/open-in-new.svg" alt="" width="30px" height="30px"></a>
+            <a href="#"><img src="../images/misc/github-mark-dark.svg" alt="Github invertocat logo" width="30px" height="30px"></a>
+            <a href="#"><img src="../images/misc/open-in-new.svg" alt="" width="30px" height="30px"></a>
           </div>
         </div>
 
@@ -128,13 +128,13 @@
       </article>
 
       <article class="project">
-        <img src="media/project-placeholder.png" alt="">
+        <img src="../images/misc/project-placeholder.png" alt="">
 
         <div class="project-heading">
           <h3>Project name</h3>
           <div>
-            <a href="#"><img src="media/github-mark-dark.svg" alt="Github invertocat logo" width="30px" height="30px"></a>
-            <a href="#"><img src="media/open-in-new.svg" alt="" width="30px" height="30px"></a>
+            <a href="#"><img src="../images/misc/github-mark-dark.svg" alt="Github invertocat logo" width="30px" height="30px"></a>
+            <a href="#"><img src="../images/misc/open-in-new.svg" alt="" width="30px" height="30px"></a>
           </div>
         </div>
 
@@ -162,9 +162,9 @@
       </section>
   
       <section class="links">
-        <a href="#"><img src="media/github-mark.svg" alt="Github invertocat logo" width="40px" height="40px"></a>
-        <a href="#"><img src="media/twitter.svg" alt="Twitter logo" width="40px" height="40px"></a>
-        <a href="#"><img src="media/linkedin.svg" alt="Linkedin logo" width="40px" height="40px"></a>
+        <a href="#"><img src="../images/misc/github-mark.svg" alt="Github invertocat logo" width="40px" height="40px"></a>
+        <a href="#"><img src="../images/misc/twitter.svg" alt="Twitter logo" width="40px" height="40px"></a>
+        <a href="#"><img src="../images/misc/linkedin.svg" alt="Linkedin logo" width="40px" height="40px"></a>
       </section>
     </section>
 
