--- a/style/main.css
+++ b/style/main.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Roboto-Regular';
-  src: url('../fonts/Roboto-Regular.ttf');
+  src: url('fonts/Roboto-Regular.ttf');
   font-style: normal;
 }
 
