--- a/style/main.css
+++ b/style/main.css
@@ -78,7 +78,9 @@ header { padding: 2rem calc(50vw / 4) }
 .programming-languages > img { transition: transform 0.5s ease; }
 
 .social-links > a:hover,
+.social-links > a:focus,
 .project-image-links > a:hover,
+.project-image-links > a:focus,
 .programming-languages > img:hover { transform: scale(1.5); }
 
 main { padding: 0 5rem; }
